@@ -3,9 +3,9 @@ bin_PROGRAMS = qterm
 
 ## INCLUDES were found outside kdevelop specific part
 
-qterm_SOURCES = soundconf.cpp soundconfui.cpp qtermsound.cpp trayicon.cpp trayicon_win.cpp trayicon_x11.cpp trayicon_mac.cpp schemadialogui.cpp schemadialog.cpp quickdialogui.cpp quickdialog.cpp qtermwndmgr.cpp qtermwindow.cpp qtermtoolbutton.cpp qtermtimelabel.cpp qtermtextline.cpp qtermtelnet.cpp qtermscreen.cpp qtermparam.cpp qtermframe.cpp qtermdecode.cpp qtermconvert.cpp qtermconfig.cpp qtermbuffer.cpp qtermbbs.cpp prefdialogui.cpp prefdialog.cpp popwidget.cpp msgdialogui.cpp msgdialog.cpp main.cpp keydialogui.cpp keydialog.cpp articledialogui.cpp articledialog.cpp addrdialogui.cpp addrdialog.cpp aboutdialogui.cpp aboutdialog.cpp qtermsocket.cpp qtermzmodem.cpp zmodemdialogui.cpp zmodemdialog.cpp
+qterm_SOURCES = soundconf.cpp soundconfui.cpp qtermsound.cpp trayicon.cpp trayicon_win.cpp trayicon_x11.cpp trayicon_mac.cpp schemadialogui.cpp schemadialog.cpp quickdialogui.cpp quickdialog.cpp qtermwndmgr.cpp qtermwindow.cpp qtermtoolbutton.cpp qtermtimelabel.cpp qtermtextline.cpp qtermtelnet.cpp qtermscreen.cpp qtermparam.cpp qtermframe.cpp qtermdecode.cpp qtermconvert.cpp qtermconfig.cpp qtermbuffer.cpp qtermbbs.cpp prefdialogui.cpp prefdialog.cpp popwidget.cpp msgdialogui.cpp msgdialog.cpp main.cpp keydialogui.cpp keydialog.cpp articledialogui.cpp articledialog.cpp addrdialogui.cpp addrdialog.cpp aboutdialogui.cpp aboutdialog.cpp qtermsocket.cpp qtermzmodem.cpp zmodemdialogui.cpp zmodemdialog.cpp qtermcanvas.cpp
 
-SOURCES = soundconf.cpp soundconfui.cpp qtermsound.cpp trayicon.cpp trayicon_win.cpp trayicon_x11.cpp trayicon_mac.cpp schemadialogui.cpp schemadialog.cpp quickdialogui.cpp quickdialog.cpp qtermwndmgr.cpp qtermwindow.cpp qtermtoolbutton.cpp qtermtimelabel.cpp qtermtextline.cpp qtermtelnet.cpp qtermscreen.cpp qtermparam.cpp qtermframe.cpp qtermdecode.cpp qtermconvert.cpp qtermconfig.cpp qtermbuffer.cpp qtermbbs.cpp prefdialogui.cpp prefdialog.cpp popwidget.cpp msgdialogui.cpp msgdialog.cpp main.cpp keydialogui.cpp keydialog.cpp articledialogui.cpp articledialog.cpp addrdialogui.cpp addrdialog.cpp aboutdialogui.cpp aboutdialog.cpp qtermsocket.cpp qtermzmodem.cpp zmodemdialogui.cpp zmodemdialog.cpp
+SOURCES = soundconf.cpp soundconfui.cpp qtermsound.cpp trayicon.cpp trayicon_win.cpp trayicon_x11.cpp trayicon_mac.cpp schemadialogui.cpp schemadialog.cpp quickdialogui.cpp quickdialog.cpp qtermwndmgr.cpp qtermwindow.cpp qtermtoolbutton.cpp qtermtimelabel.cpp qtermtextline.cpp qtermtelnet.cpp qtermscreen.cpp qtermparam.cpp qtermframe.cpp qtermdecode.cpp qtermconvert.cpp qtermconfig.cpp qtermbuffer.cpp qtermbbs.cpp prefdialogui.cpp prefdialog.cpp popwidget.cpp msgdialogui.cpp msgdialog.cpp main.cpp keydialogui.cpp keydialog.cpp articledialogui.cpp articledialog.cpp addrdialogui.cpp addrdialog.cpp aboutdialogui.cpp aboutdialog.cpp qtermsocket.cpp qtermzmodem.cpp zmodemdialogui.cpp zmodemdialog.cpp qtermcanvas.cpp
 
 INTERFACES = 
 TRANSLATIONS = 
@@ -19,7 +19,7 @@ qterm_LDADD = $(LIB_QPE) $(LIBPYTHON) $(ESD_LIB) $(LIB_SOUNDSERVER) $(LIB_QT) $(
 
 SUBDIRS = cursor pic script docs schema ui po
 endif
-EXTRA_DIST = aboutdialog.cpp aboutdialog.h aboutdialogui.cpp aboutdialogui.h addrdialog.cpp addrdialog.h addrdialogui.cpp addrdialogui.h articledialog.cpp articledialog.h articledialogui.cpp articledialogui.h keydialog.cpp keydialog.h keydialogui.cpp keydialogui.h main.cpp msgdialog.cpp msgdialog.h msgdialogui.cpp msgdialogui.h popwidget.cpp popwidget.h prefdialog.cpp prefdialog.h prefdialogui.cpp prefdialogui.h qtermbbs.cpp qtermbbs.h qtermbuffer.cpp qtermbuffer.h qterm.cfg qtermconfig.cpp qtermconfig.h qtermconvert.cpp qtermconvert.h qtermdecode.cpp qtermdecode.h qtermframe.cpp qtermframe.h qterm.h qtermparam.cpp qtermparam.h qtermscreen.cpp qtermscreen.h qtermtelnet.cpp qtermtelnet.h qtermtextline.cpp qtermtextline.h qtermtimelabel.cpp qtermtimelabel.h qtermtoolbutton.cpp qtermtoolbutton.h qtermwindow.cpp qtermwindow.h qtermwndmgr.cpp qtermwndmgr.h quickdialog.cpp quickdialog.h quickdialogui.cpp quickdialogui.h schemadialog.cpp schemadialog.h schemadialogui.cpp schemadialogui.h address.cfg trayicon_mac.cpp trayicon_x11.cpp trayicon_win.cpp trayicon.h trayicon.cpp credits qtermsound.h qtermsound.cpp soundconfui.cpp soundconfui.h soundconf.cpp soundconf.h qterm.prj qterm.rc qterm.ico qterm.icns qtermsocket.h qtermsocket.cpp qtermzmodem.h qtermzmodem.cpp zmodemdialogui.h zmodemdialogui.cpp zmodemdialog.h zmodemdialog.cpp
+EXTRA_DIST = aboutdialog.cpp aboutdialog.h aboutdialogui.cpp aboutdialogui.h addrdialog.cpp addrdialog.h addrdialogui.cpp addrdialogui.h articledialog.cpp articledialog.h articledialogui.cpp articledialogui.h keydialog.cpp keydialog.h keydialogui.cpp keydialogui.h main.cpp msgdialog.cpp msgdialog.h msgdialogui.cpp msgdialogui.h popwidget.cpp popwidget.h prefdialog.cpp prefdialog.h prefdialogui.cpp prefdialogui.h qtermbbs.cpp qtermbbs.h qtermbuffer.cpp qtermbuffer.h qterm.cfg qtermconfig.cpp qtermconfig.h qtermconvert.cpp qtermconvert.h qtermdecode.cpp qtermdecode.h qtermframe.cpp qtermframe.h qterm.h qtermparam.cpp qtermparam.h qtermscreen.cpp qtermscreen.h qtermtelnet.cpp qtermtelnet.h qtermtextline.cpp qtermtextline.h qtermtimelabel.cpp qtermtimelabel.h qtermtoolbutton.cpp qtermtoolbutton.h qtermwindow.cpp qtermwindow.h qtermwndmgr.cpp qtermwndmgr.h quickdialog.cpp quickdialog.h quickdialogui.cpp quickdialogui.h schemadialog.cpp schemadialog.h schemadialogui.cpp schemadialogui.h address.cfg trayicon_mac.cpp trayicon_x11.cpp trayicon_win.cpp trayicon.h trayicon.cpp credits qtermsound.h qtermsound.cpp soundconfui.cpp soundconfui.h soundconf.cpp soundconf.h qterm.prj qterm.rc qterm.ico qterm.icns qtermsocket.h qtermsocket.cpp qtermzmodem.h qtermzmodem.cpp zmodemdialogui.h zmodemdialogui.cpp zmodemdialog.h zmodemdialog.cpp qtermcanvas.h qtermcanvas.cpp
 
 install-data-local:
 	$(mkinstalldirs) $(datadir)/qterm/
